syntax = "proto3";

package greet;

option go_package = "github.com/ocionejr/go-grpc-udemy/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc SumNumbers (SumRequest) returns (SumResponse);
}